...
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            >
            <TextView
                android:id="@+id/usernameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Caroline"
                android:textSize="24sp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                />
            <TextView
                android:id="@+id/addressTV"
...
